[desktop] s/add-exports/add-opens