@@ -32,8 +32,8 @@ application {
     mainClass = 'com.limegroup.gnutella.gui.Main'
     applicationDefaultJvmArgs = [
             '-Djava.library.path=lib/native',
-            '--add-exports=java.desktop/java.awt=ALL-UNNAMED',
-            '--add-exports=java.desktop/javax.swing=ALL-UNNAMED',
+            '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
+            '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
             '-Xms64m',
             '-Xmx512m',
             '-Xss768k',
